Core-1550: fix color contrast for give button (hover)
[CORE-1550]

--- a/src/app/layouts/default/header/menus/give-button/give-button.scss
+++ b/src/app/layouts/default/header/menus/give-button/give-button.scss
@@ -12,7 +12,7 @@
 
     &:hover,
     &:focus {
-        background-color: darken(os-color(gold), 20%);
-        color: text-color(white);
+        background-color: darken(os-color(gold), 5%);
+        color: text-color(normal);
     }
 }
